# Chronos

./: .gitignore  CMakeLists.txt  README.md
helpers/: update_path.ps1
src/: includes.h  main.c  time_parser.c
src/time_setters/: ts_linux.c  ts_macos.swift  ts_windows.c
