cmake_minimum_required(VERSION 3.28)

if (UNIX AND NOT APPLE)
    project(Chronos)
	add_executable(chronos src/main.c src/time_parser.c src/time_setters/ts_linux.c)
    target_compile_definitions(chronos PUBLIC LINUX_OS)
elseif (WIN32)
    project(Chronos)
	add_executable(chronos src/main.c src/time_parser.c src/time_setters/ts_windows.c)
    target_compile_definitions(chronos PUBLIC WINDOWS_OS)
    install(TARGETS chronos)
elseif (APPLE)
    project(Chronos LANGUAGES C Swift)
    add_library(ts_macos STATIC src/time_setters/ts_macos.swift)
	add_executable(chronos src/main.c)
	target_link_libraries(chronos PUBLIC ts_macos)
    target_compile_definitions(chronos PUBLIC MAC_OS)
endif()

if (UNIX)
    install(TARGETS chronos DESTINATION /usr/local/bin)
endif()